# dros

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: DESIGN.md
src/dros/: __init__.py  _bus.py  _exceptions.py  _logging.py  _node.py  _topic.py  _transport.py
tests/: test_bus.py  test_client.py  test_hub.py  test_integration.py  test_topic.py
